Added selecting payment method when user accepting a seller order / Added exception for insufficient balance