@@ -48,7 +48,7 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(role);
+        return Collections.singletonList(new SimpleGrantedAuthority(role.getName()));
     }
 
     @Override
